# certs4mikrotik

./: .gitignore  ARCHITECTURE.md  GIT_HISTORY_UPDATE.md  INSTALL.md  LICENSE  MANIFEST.in  PROJECT_INFO.md  QUICKSTART.md  README.md  SUMMARY.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: publish-to-pypi.yml
examples/: router-password-example.yaml  routers-config-example.yaml
k8s/: certs2mikrotik-config.example.yaml  certs4devices-config.example.yaml  cluster-role-issuers.yaml  clusterissuer-example.yaml  clusterrolebinding-issuers.yaml  cronjob.yaml  issuer-example.yaml  role-cert-manager.yaml  role-secret-reader.yaml  rolebinding-full.yaml  rolebinding-secrets.yaml  routers-config-example.yaml  routers-config.yaml  service-account.yaml  upload-script.cm.yaml.sh  upload-script.yaml
src/: __init__.py  cert2device.py  cert2mikrotik.py  upload-router-complete.py
src/uploaders/: __init__.py  base.py  mikrotik.py  reolink.py
