[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certs4mikrotik"
version = "1.0.0"
description = "Automated certificate management for MikroTik routers with cert-manager integration"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Security :: Cryptography",
]
keywords = ["mikrotik", "certificates", "cert-manager", "kubernetes", "automation"]
requires-python = ">=3.8"
dependencies = [
    "librouteros>=3.4.1",
    "paramiko>=4.0.0",
    "scp>=0.15.0",
    "kubernetes>=34.0.0",
    "reolink-aio @ git+https://github.com/mabels/reolink_aio.git@feature/certificate-upload",
]

[project.urls]
Homepage = "https://github.com/menabe/certs4mikrotik"
Repository = "https://github.com/menabe/certs4mikrotik"
Issues = "https://github.com/menabe/certs4mikrotik/issues"

[project.scripts]
cert2mikrotik = "certs4mikrotik.cert2mikrotik:cli_main"

[tool.setuptools]
packages = ["certs4mikrotik"]
package-dir = {"certs4mikrotik" = "src"}
