[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-cert-to-device"
version = "1.0.0"
description = "Automated certificate deployment from Kubernetes cert-manager to network devices (MikroTik routers, Reolink cameras)"
readme = "README.md"
authors = [
    {name = "Meno Abels", email = "meno.abels@adviser.com"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Security :: Cryptography",
]
keywords = ["kubernetes", "cert-manager", "certificates", "mikrotik", "reolink", "automation", "network-devices"]
requires-python = ">=3.8"
dependencies = [
    "librouteros>=3.4.1",
    "paramiko>=4.0.0",
    "scp>=0.15.0",
    "kubernetes>=34.0.0",
    "reolink-aio @ git+https://github.com/mabels/reolink_aio.git@feature/certificate-upload",
]

[project.urls]
Homepage = "https://github.com/mabels/k8s-cert-to-device"
Repository = "https://github.com/mabels/k8s-cert-to-device"
Issues = "https://github.com/mabels/k8s-cert-to-device/issues"

[project.scripts]
k8s-cert-to-device = "certs4devices.cert2device:cli_main"

[tool.setuptools]
packages = ["certs4devices", "certs4devices.uploaders"]
package-dir = {"certs4devices" = "src"}
